[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_bsisay"
version = "0.0.1"
authors = [
  { name="Benjamin Sisay", email="beniamamare23@gmail.com" },
]
description = "Dijsktras algorithm"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Benjaminsisay/packages"